<resources>
    <string name="app_name">Amazon Monitores</string>
    <string name="Textlogin">INICIAR SESIÓN</string>
    <string name="amazon">AMAZON</string>
    <string name="fondo">Pagina principal</string>
    <string name="user">Usuario</string>
    <string name="password">Contraseña</string>
    <string name="passwordRepetir">Repite la contraseña</string>
    <string name="btn_acceder">Iniciar Sesión</string>
    <string name="btn_google">Google</string>
    <string name="btn_facebook">Facebook</string>
    <string name="PreguntaCuenta">¿Necesitas una cuenta?</string>
    <string name="btn_registrar">Crear cuenta</string>
    <string name="NuevaContrasenia">Recuperar contraseña</string>
    <string name="Cerrar">Cerrar</string>
    <string name="NuevaPassword">Redirigiendo a recuperación de contraseña</string>
    <string name="Entrando">Accediendo a tu cuenta</string>
    <string name="accGoogle">Accediendo por google</string>
    <string name="accFaceb">Accediendo por facebook</string>
    <string name="registrar">Redirigiendo a la pagina de registro</string>
    <string name="MensError">Por favor, complete todos los campos</string>
    <string name="nocorreo">Correo inválido</string>
    <string name="nuevocorreo">Por favor, ingrese un correo electrónico válido.</string>
    <string name="nocontra">Contraseña inválida</string>
    <string name="nuevacontra">La contraseña debe tener entre 6 y 10 caracteres.</string>
    <string name="ok">Entendido</string>
    <string name="textoEntrar">Iniciar sesión con:</string>
    --aqui empiezan los string de los recyclerView--
    <string name="titulo">Nombre</string>
    <string name="precio">Precio</string>
    <string name="fav">Botón de favorito</string>
    <string name="amazonFoto">amazon</string>
    <string name="pantallaFoto">pantalla</string>
    <string name="llamar">Llamar</string>
    <string name="correo">Correo electrónico</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="mapa">Google Maps</string>
    <string name="telefonoTexto">123 123 321</string>
    <string name="correoTexto">amazon@gmail.com</string>
    <string name="wasText">Contacta con nosotros</string>
    <string name="mapaTexto">Visitanos</string>
    <string name="mapaContDescrip">mapa</string>
    <string name="irContacto">Redirigiendo al contacto. Pulsa Google</string>
    <!--permisos-->
    <string name="permisoRechazado">El permiso ha sido rechazado previamente, debes activarlo desde ajustes</string>
    <string name="noAppMaps">No existe app de maps</string>
    <string name="permiUbica">El permiso de ubicación es necesario para abrir el mapa</string>
    <string name="llamadaNoPosible">No es posible hacer la llamada sin la app disponible</string>
    <string name="noCorreoApp">No se encontró una aplicación para enviar correos</string>
    <string name="bienvenidaWas">¡Bienvenido! Contacta son nosotros en caso de cualquier duda.</string>
    <string name="noAppWas">No se encontró la aplicación de WhatsApp.</string>


    <!--registro-->
    <string name="registro">Registro</string>
    <string name="Registrarbtn">Registrarse</string>
    <string name="fechanac">Fecha de nacimiento</string>
    <string name="fechaFormato">%1$d/%2$d/%3$d</string><!--depsues se reemplazan por el dia mes y año-->
    <!--
    <string name="fechNacer">Fecha de nacimiento seleccionada:</string>
    <string name="btonNacer">Seleccionar fecha nacimiento</string>
    -->
    <string name="TextSelecciona">Selecciona tu fecha de nacimiento</string>

    <!--Scaffold........................................................................-->
    <string name="hello_blank_fragment">Hola blank fragment</string>
    <string name="navigation_drawer_open">Hola</string>
    <string name="navigation_drawer_close">Cerrar</string>
    <string name="home">Home</string>
    <string name="dashboard">Dashboard</string>
    <string name="contacto">contacto</string>
    <string name="favoritos">Favoritos</string>
    <string name="fotoperfil">fotoPerfil</string>
    <string name="opciones">Opciones</string>
    <string name="homeDrawer">Home</string>
    <string name="favoritosString">Favoritos</string>
    <string name="cerrarSesion">Cerrar Sesion</string>
    <string name="buscarLupa">Buscar</string>
    <string name="ajustes">Ajustes</string>
    <string name="ordenar">Ordenar</string>
    <string name="errorAutenticacion">Usuario no registrado</string>
    <string name="errorAutenticacionFrase">Registrate primero o comprueba tu contraseña</string>
    <string name="resetPass">Restaurar Contraseña</string>
    <string name="sendEmail">Enviar correo</string>
    <string name="enviarCorreo">Correo enviado</string>
    <string name="botonCancelar">Cancelar</string>
    <string name="permisoUbicacionDenegado">Permiso de ubicación denegado. No se puede abrir el mapa.</string>
    <string name="salir">Salir</string>
    <string name="listaMonitores">Monitores</string>
    <string name="Contacto">Contacta con nosotros</string>
    <string name="listas">Listas</string>
    <string name="usuario">Usuario</string>

    <string name="idWeb">
        1020334167712-9h8apog6o7oomvlq3k5j0cgnhn1ugpkc.apps.googleusercontent.com
    </string>
    <string name="amazonPresentacion">
        En Amazon, nos esforzamos por ser la empresa más centrada en el cliente del mundo, ofreciendo una amplia
        selección de productos, innovación y comodidad para hacer tu vida más fácil.
    </string>
    <string name="logueatelogin">Logueate en Login.</string>
    <string name="login_exitoso">...Login exitoso...</string>
    <string name="error_en_el_login">Error en el login</string>

</resources>