<menu
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <item
            android:id="@+id/action_search"
            android:icon="@drawable/ic_search"
            android:title="@string/buscarLupa"
            app:showAsAction="ifRoom|collapseActionView"
            app:actionViewClass="androidx.appcompat.widget.SearchView"/>

    <item
            android:id="@+id/action_sort"
            android:icon="@drawable/ic_sort"
            android:title="Ordenar"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/action_settings"
            android:icon="@drawable/ic_more_vert"
            android:title="@string/ajustes"
            app:showAsAction="ifRoom">

            <menu>
                <item
                        android:id="@+id/cerrarSesion"
                        android:title="@string/cerrarSesion"
                        android:icon="@drawable/ic_logout"/>

            </menu>

    </item>

</menu>