<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:padding="20dp"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/alertDialogResetPassword"
     android:background="@color/white"
>


    <TextView
            android:text="@string/resetPass"
            android:textColor="@color/grey"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/tituloResetPass"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.095"
            android:textSize="35sp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
    />

    <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/correoResetPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/correo"
            android:layout_marginBottom="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tituloResetPass"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
            android:text="@string/sendEmail"
            android:layout_width="132dp"
            android:layout_height="49dp"
            android:id="@+id/sendEmailResetPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="10dp"
            android:background="@color/grey"
            android:textAlignment="center" android:paddingLeft="10dp" android:paddingRight="10dp"
            app:layout_constraintTop_toBottomOf="@+id/correoResetPass" app:layout_constraintVertical_bias="1.0"
            android:textColor="@color/black"
            android:textSize="14sp"

    />

</androidx.constraintlayout.widget.ConstraintLayout>